update the server url

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="left-menu">
+      <button id="refresh_button">Refresh</button>
+      <button id="new_chat_button">New Chat</button>
+    </div>    
     <div id="app">
       <div id="chat_container"></div>
 
